--- a/package.json
+++ b/package.json
@@ -6,8 +6,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "date-fns": "^2.29.3",
+    "gray-matter": "^4.0.3",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "sass": "^1.56.1",
+    "style-loader": "^3.3.1",
+    "tailwindcss": "^3.2.4"
   }
 }
